# Generic-Makefile

cmake/: CMakeLists.txt
make/: Makefile
